--- a/src/_metronic/i18n/messages/en.json
+++ b/src/_metronic/i18n/messages/en.json
@@ -6,8 +6,14 @@
   "MENU.PAGES": "Pages",
   "MENU.FEATURES": "Features",
   "MENU.APPS": "Apps",
-  "MENU.DASHBOARD": "Thông tin chung",
+  "MENU.THONGTINCHUNG": "Thông tin chung",
   "MENU.PHIEUNHANHANG": "Phiếu nhận hàng",
+  "MENU.PHIEUNHANHANGDAXOA": "Phiếu nhận hàng đã xóa",
+  "MENU.KETCA": "Kết ca",
+  "MENU.BAOCAO": "Báo cáo",
+  "MENU.KHOANGCACH": "Khoảng cách",
+  "MENU.TUYENDUONG": "Tuyến đường",
+  "MENU.DONGGOI": "Đóng gói",
   "AUTH.GENERAL.OR": "Or",
   "AUTH.GENERAL.SUBMIT_BUTTON": "Submit",
   "AUTH.GENERAL.NO_ACCOUNT": "Don't have an account?",
