--- a/src/_metronic/i18n/messages/en.json
+++ b/src/_metronic/i18n/messages/en.json
@@ -14,6 +14,7 @@
   "MENU.KHOANGCACH": "Khoảng cách",
   "MENU.TUYENDUONG": "Tuyến đường",
   "MENU.DONGGOI": "Đóng gói",
+  "MENU.TINHNHANHANG": "Tỉnh nhận hàng",
   "AUTH.GENERAL.OR": "Or",
   "AUTH.GENERAL.SUBMIT_BUTTON": "Submit",
   "AUTH.GENERAL.NO_ACCOUNT": "Don't have an account?",
