--- a/src/_metronic/i18n/messages/en.json
+++ b/src/_metronic/i18n/messages/en.json
@@ -1,4 +1,29 @@
 {
+  "MENU.THONGTINCHUNG": "Thông tin chung",
+  "MENU.THONGDAUVAO": "Thông tin đầu vào",
+  "MENU.PHIEUNHANHANG": "Phiếu nhận hàng",
+  "MENU.PHIEUNHANHANGDAXOA": "Phiếu nhận hàng đã xóa",
+  "MENU.KETCA": "Kết ca",
+  "MENU.BAOCAO": "Báo cáo",
+  "MENU.KHOANGCACH": "Khoảng cách",
+  "MENU.TUYENDUONG": "Tuyến đường",
+  "MENU.GIACUOCTHEOKG": "Giá cước theo KG",
+  "MENU.GIACUOCTHEOCBM": "Giá cước theo CBM",
+  "MENU.GIA": "Giá",
+  "MENU.VUNGGIA": "Vùng giá",
+  "MENU.GIAKG": "Giá theo KG",
+  "MENU.GIACBM": "Giá theo CBM",
+
+  "MENU.DONGGOI": "Đóng gói",
+  "MENU.DONGGOITHUONG": "Đóng gói thường",
+  "MENU.DONGGOICBM": "Đóng gói CBM",
+
+  "MENU.VITRI": "Vị trí",
+  "MENU.KHUVUC": "Khu vực",
+  "MENU.TINHNHANHANG": "Tỉnh/Thành phố",
+  "MENU.HUYENNHANHANG": "Quận/Huyện",
+  "MENU.XANHANHANG": "Phường/Xã",
+  
   "TRANSLATOR.SELECT": "Select your language",
   "MENU.NEW": "new",
   "MENU.ACTIONS": "Actions",
@@ -8,15 +33,6 @@
   "MENU.PAGES": "Pages",
   "MENU.FEATURES": "Features",
   "MENU.APPS": "Apps",
-  "MENU.THONGTINCHUNG": "Thông tin chung",
-  "MENU.PHIEUNHANHANG": "Phiếu nhận hàng",
-  "MENU.PHIEUNHANHANGDAXOA": "Phiếu nhận hàng đã xóa",
-  "MENU.KETCA": "Kết ca",
-  "MENU.BAOCAO": "Báo cáo",
-  "MENU.KHOANGCACH": "Khoảng cách",
-  "MENU.TUYENDUONG": "Tuyến đường",
-  "MENU.DONGGOI": "Đóng gói",
-  "MENU.TINHNHANHANG": "Tỉnh nhận hàng",
   "AUTH.GENERAL.OR": "Or",
   "AUTH.GENERAL.SUBMIT_BUTTON": "Submit",
   "AUTH.GENERAL.NO_ACCOUNT": "Don't have an account?",
