--- a/src/_metronic/i18n/messages/en.json
+++ b/src/_metronic/i18n/messages/en.json
@@ -24,7 +24,7 @@
   "MENU.XANHANHANG": "Phường/Xã",
 
   "MENU.THONGTINCHUNG": "Thông tin chung",
-  "MENU.THUESUAT": "Thuế suất",
+  "MENU.PHI-THUE": "Phí/thuế",
 
   
   "TRANSLATOR.SELECT": "Select your language",
