--- a/src/_metronic/i18n/messages/en.json
+++ b/src/_metronic/i18n/messages/en.json
@@ -4,6 +4,8 @@
   "MENU.PHIEUNHANHANGDAXOA": "Phiếu nhận hàng đã xóa",
   "MENU.KETCA": "Kết ca",
   "MENU.BAOCAO": "Báo cáo",
+  "MENU.HANGTRONGKHO": "Hàng trong kho",
+
   "MENU.KHOANGCACH": "Khoảng cách",
   "MENU.TUYENDUONG": "Tuyến đường",
   "MENU.GIACUOCTHEOKG": "Giá cước theo KG",
